--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@tanstack/react-query-devtools": "4.28",
     "axios": "^1.7.9",
     "framer-motion": "^11.15.0",
+    "ms": "^2.1.3",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-infinite-scroll-component": "6.1"
+    "react-infinite-scroll-component": "6.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/ms": "^2.1.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
